# tas_client_api

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.py
apps/pytas_chl_api_demo/: pytas_chl_client_demo.py
apps/pytas_rw_api_demo/: pytas_rw_client_demo.py
apps/tas_chl_api_demo/: CMakeLists.txt  tas_chl_api_demo_main.cpp
apps/tas_rw_api_demo/: CMakeLists.txt  tas_rw_api_demo_main.cpp
cmake/: TasClientApiMinDepVersions.cmake  TasClientApiUtils.cmake
cmake/templates/: TasClientApiConfig.cmake.in  setup.py.in
docs/: CMakeLists.txt  Doxyfile.in  client_chl_api.md  client_rw_api.md  client_trc_api.md  header.html  mainpage.md
python/: CMakeLists.txt  README.md
python/binding/: tas_python_binding.cpp  tas_python_binding.hpp  tas_python_client_chl.cpp  tas_python_client_chl.hpp  tas_python_client_rw.hpp  tas_python_client_rw_base.cpp  tas_python_client_rw_base.hpp  tas_python_client_server_con.cpp  tas_python_client_server_con.hpp  tas_python_client_trc.cpp  tas_python_client_trc.hpp
python/tests/: __init__.py  tas_python_client_rw_test.py  tas_python_client_server_test.py
src/: CMakeLists.txt
src/tas_client/: CMakeLists.txt  tas_am15_am14.h  tas_client.h  tas_client_chl.cpp  tas_client_chl.h  tas_client_impl.h  tas_client_rw.h  tas_client_rw_base.cpp  tas_client_rw_base.h  tas_client_server_con.cpp  tas_client_server_con.h  tas_client_trc.cpp  tas_client_trc.h  tas_debug.h  tas_device_family.h  tas_pkt.h  tas_pkt_handler_base.cpp  tas_pkt_handler_base.h  tas_pkt_handler_chl.cpp  tas_pkt_handler_chl.h  tas_pkt_handler_rw.cpp  tas_pkt_handler_rw.h  tas_pkt_handler_server_con.cpp  tas_pkt_handler_server_con.h  tas_pkt_handler_trc.cpp  tas_pkt_handler_trc.h  tas_pkt_mailbox_if.h  tas_pkt_mailbox_socket.cpp  tas_pkt_mailbox_socket.h  tas_utils.cpp  tas_utils.h  tas_utils_client.h  tas_utils_ifx.cpp  tas_utils_ifx.h  tas_utils_jtag.cpp  tas_utils_jtag.h  tas_utils_os.cpp
src/tas_socket/: CMakeLists.txt  tas_conn_socket.cpp  tas_conn_socket.h  tas_socket.cpp  tas_socket.h  tas_tcp_server_socket.cpp  tas_tcp_server_socket.h  tas_tcp_socket.cpp  tas_tcp_socket.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tools/: build.py  deploy.py  start_tas_server.bat  test.py  utilities.py
